# glGetTool

./: CMakeLists.txt  README.md  glGet.c  mental_gl.h
